<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/PaddingMediumSize"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:text="@string/dni"
            android:textSize="@dimen/SizeSuperLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/twoPoints"
            android:textSize="@dimen/SizeSuperLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lblDniUser_Det"
            android:textSize="@dimen/SizeSuperLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:text="@string/direction"
            android:textSize="@dimen/SizeSuperLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/twoPoints"
            android:textSize="@dimen/SizeSuperLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lblDireccionUser_Det"
            android:textSize="@dimen/SizeSuperLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:text="@string/age"
            android:textSize="@dimen/SizeSuperLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/twoPoints"
            android:textSize="@dimen/SizeSuperLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lblEdadUser_Det"
            android:textSize="@dimen/SizeSuperLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:text="@string/carreer"
            android:textSize="@dimen/SizeSuperLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/twoPoints"
            android:textSize="@dimen/SizeSuperLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lblCarreraUser_Det"
            android:textSize="@dimen/SizeSuperLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imgUsuarioUser_Det"
            android:layout_width="@dimen/ImageHorizontalMediumSize"
            android:layout_height="@dimen/ImageVerticalMediumSize"/>

    </LinearLayout>



</LinearLayout>